  didn't check any box specific attributes.

- Updated how GTMNSObject+UnitTesting searches for files to include the Target
  SDK from compile time.  Also removed some of the formatting options so
  try and make it simpler to follow.

- Added GTMNSDictionary+CaseInsensitive, e.g. for use with HTTP headers.

- Added GTMNSData+Hex for conversion to and from hex strings.

Release 1.5.1
Changes since 1.5.0
16-June-2008

- Fixed building tiger gcov w/ a directory path that contains a space.


Release 1.5.0
Changes since 1.0.0
13-June-2008

- Updated the project to Xcode 3.  This is the only supported Xcode version
  for the project.  The code can build against the Tiger or Leopard SDKs, and
  developers can pull individual files into a Xcode 2.x project and things
  should work just fine.

- Fixed up the prefix header of the project and prefix handing in the Unittest
  Xcode Config. (thanks schafdog)

- Fixed error in handling default compression for NSData+zlib

- Changed name on API in NSString+XML and added another api to make this a
  litte more clear. (thanks Kent)

- GTMRegex
  - Found and fixed a bug in the enumerators that was causing them to
    incorrectly walk a string when using '^' in an expression.
  - Added helpers for substring tests and unittests for the new apis.
  - Added initializer that takes an outError to allow the collection of any
    pattern parsing error message (in case the pattern came from a user and
    complete error information is needed to message the user).

- Added GTMScriptRunner for spawning scripts.

- Added GTMNSFileManager+Path for two small helpers.

- Added GTMNSWorkspace+ScreenSaver

- Added GTMNSString+Data

- added a common header (GTMDefines) for any common defines so the conditionals
  are all in one place

- Support for things compiling against the iPhone SDK
  - Everything in the GTMiPhone project works in the iPhone
  - Added iPhone xcconfig files
  - Added iPhone unittests (See below)

- More work on the UI unittests